# DataStructures-Algo

./: README.md
Tutorial 4/: Stack.cpp
Tutorial 4 Stacks/: CMakeLists.txt  Stack.h  main.cpp
Week 1 Pointers/: main.cpp  printInteger.cpp
Week 1 Practical 1/: CMakeLists.txt  pointerDemo.cpp
Week 1 Practical 2/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
Week 2 Lists/: List.h
Week 2 Practical 2/: List.cpp
Week 3 Linked Lists/: CMakeLists.txt  List.h  main.cpp
Week 3 Practical 3/: List.cpp  List.h  main.cpp
Week 4 Practical 4/: CMakeLists.txt  Stack.cpp  Stack.h  main.cpp
Week 5 Queues/: CMakeLists.txt  Queue.cpp  Queue.h  main.cpp
Week 6 Hash Tables/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  main.cpp
Week 7 Recursion/: CMakeLists.txt  main.cpp
Week 8 Searching/: CMakeLists.txt  main.cpp
Week 9 Trees/: BST.cpp  BST.h  BinaryNode.h  CMakeLists.txt  main.cpp
