cmake_minimum_required(VERSION 3.17)
project(Week_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week_1 main.cpp printInteger.cpp pointerDemo.cpp cmake-build-debug/pointerDemo2.cpp cmake-build-debug/calYearlySalary.cpp cmake-build-debug/Employee.cpp cmake-build-debug/Employee.h cmake-build-debug/Account.cpp cmake-build-debug/Account.h cmake-build-debug/SavingsAccount.h cmake-build-debug/SavingsAccount.cpp cmake-build-debug/CheckingAccount.cpp cmake-build-debug/CheckingAccount.h cmake-build-debug/banking.cpp)